--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>VOD App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div id="app" />
