--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>VOD App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/video-js.css">
+    <link rel="stylesheet" href="css/ReactHtml5Video.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
